--- a/sass/components/_subscription.scss
+++ b/sass/components/_subscription.scss
@@ -1,11 +1,11 @@
-.subscription__form {
-  @include centered-flex();
-}
+// .subscription__form {
+//   @include centered-flex();
+// }
 
 .subscription__input {
   width: 358px;
   height: 50px;
-  margin-right: 12px;
+  // margin-right: 12px;
   padding-left: 16px;
   padding-right: 16px;
 
