--- a/sass/layout/_filter.scss
+++ b/sass/layout/_filter.scss
@@ -1,5 +1,7 @@
 .filter {
-  @include centered-flex();
+  display: flex;
+  flex-wrap: wrap;
+  // @include centered-flex();
   margin-bottom: 50px;
 }
 
