--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,6 +1,18 @@
 .container {
-  width: 1200px;
+  // width: 1200px;
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
+
+  @include respond-at($small-device) {
+    width: 480px;
+  }
+
+  @include respond-at($medium-device) {
+    width: 768px;
+  }
+
+  @include respond-at($large-device) {
+    width: 1200px;
+  }
 }
