--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -22,8 +22,10 @@
   transform: translate(-50%, -50%) scale(1);
   transition: transform $timing $function, box-shadow $timing $function;
 
-  width: 528px;
-  min-height: 581px;
+  width: 450px;
+  min-height: 609px;
+  // width: 528px;
+  // min-height: 581px;
   padding: 40px;
 
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
