--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,9 +1,10 @@
 .hero {
   max-width: 1600px;
-  min-height: 600px;
+  // min-height: 600px;
+  min-height: 400px;
   margin-left: auto;
   margin-right: auto;
-  padding: 200px 0;
+  // padding: 200px 0;
   text-align: center;
 
   background-color: $footer-bg-color;
@@ -19,7 +20,7 @@
 }
 
 .hero__title {
-  width: 696px;
+  // width: 696px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 30px;
