--- a/sass/layout/_site-nav.scss
+++ b/sass/layout/_site-nav.scss
@@ -1,10 +1,10 @@
 .site-nav {
-  @include centered-flex();
+  //   @include centered-flex();
 }
 
 .site-nav__list {
-  display: flex;
-  margin-left: 93px;
+  // display: flex;
+  // margin-left: 93px;
 }
 
 .site-nav__link {
@@ -22,25 +22,25 @@
     color: $accent-color;
   }
 
-  &--current {
-    position: relative;
-    color: $accent-color;
-  }
+  // &--current {
+  //   position: relative;
+  //   color: $accent-color;
+  // }
 
-  &--current::after {
-    position: absolute;
-    bottom: -1px;
-    left: 0;
+  // &--current::after {
+  //   position: absolute;
+  //   bottom: -1px;
+  //   left: 0;
 
-    content: '';
-    width: 100%;
-    height: 4px;
+  //   content: '';
+  //   width: 100%;
+  //   height: 4px;
 
-    background-color: $accent-color;
-    border-radius: 2px;
-  }
+  //   background-color: $accent-color;
+  //   border-radius: 2px;
+  // }
 }
 
-.site-nav__item:not(:last-child) {
-  margin-right: 50px;
-}
+// .site-nav__item:not(:last-child) {
+//   margin-right: 50px;
+// }
