add mobile menu + other changes

--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -30,4 +30,8 @@
 .contacts__icon {
   margin-right: 10px;
   fill: currentColor;
+
+  @media screen and (max-width: 479px) {
+    display: none;
+  }
 }
