--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -1,20 +1,34 @@
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 
   &--no-top-padding {
     padding-top: 0;
+
+    @media screen and (max-width: 767px) {
+      display: none;
+    }
   }
 
   &--another-bg-color {
     background-color: $secondary-bg-color;
   }
+
+  @media screen and (min-width: $large) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .section__title {
   @extend %title;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 
-  @include font(null, 36px, 1.17, null);
+  @include font($bold, 28px, 1.18, null);
   text-align: center;
+
+  @media screen and (min-width: $large) {
+    margin-bottom: 50px;
+    @include font($bold, 36px, 1.17, null);
+  }
 }
