--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,22 +1,31 @@
 .team {
-  // display: flex;
+  @media screen and (min-width: $large) {
+    display: flex;
+  }
 }
 
 .team__item {
-  margin-bottom: 30px;
   background-color: $primary-bg-white-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 
-  // &:not(:last-child) {
-  //   margin-right: $card-gap;
-  // }
+  &:not(:last-child) {
+    margin-bottom: 30px;
+
+    @media screen and (min-width: $large) {
+      margin-right: $card-gap;
+    }
+  }
 }
 
 .team__thumb {
   padding-top: $card-gap;
-  padding-bottom: $card-gap;
+  padding-bottom: 24px;
+
+  @media screen and (min-width: $large) {
+    padding-bottom: $card-gap;
+  }
 }
 
 .team__title {
