--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,14 +1,22 @@
 .logo {
   @extend %link;
   font-family: $font-family-logo;
-  @include font($bold, 26px, 1.2, null);
+  @include font($bold, 24px, 1.17, null);
   color: $accent-color;
-}
 
-.logo--color-dark {
-  color: $nav-text-color;
-}
+  &--color-dark {
+    color: $nav-text-color;
+  }
 
-.logo--color-light {
-  color: $primary-bg-white-color;
+  &--color-light {
+    color: $primary-bg-white-color;
+  }
+
+  &--header {
+    padding: 16px 0;
+  }
+
+  @media screen and (min-width: 1200px) {
+    @include font($bold, 26px, 1.9, null);
+  }
 }
