--- a/sass/components/_subscription.scss
+++ b/sass/components/_subscription.scss
@@ -1,11 +1,18 @@
-// .subscription__form {
-//   @include centered-flex();
-// }
+.subscription__form {
+  // text-align: center;
+
+  @media screen and (min-width: $large) {
+    @include centered-flex();
+    // margin-left: 0;
+    // margin-right: 0;
+  }
+}
 
 .subscription__input {
-  width: 358px;
+  width: 100%;
   height: 50px;
-  // margin-right: 12px;
+  margin-bottom: 20px;
+
   padding-left: 16px;
   padding-right: 16px;
 
@@ -22,9 +29,17 @@
     line-height: 1.25;
     color: $contacts-text-color;
   }
+
+  @media screen and (min-width: $large) {
+    width: 358px;
+    margin-right: 12px;
+    // margin-bottom: 0;
+  }
 }
 
 .subscription__btn {
+  margin-left: auto;
+  margin-right: auto;
   @include centered-flex();
 }
 
