--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,14 +1,21 @@
 .card-set {
   display: flex;
   flex-wrap: wrap;
-  // margin-right: calc(-1 * #{$card-gap});
-  // margin-bottom: calc(-1 * #{$card-gap});
+
+  @media screen and (min-width: $large) {
+    margin-right: calc(-1 * #{$card-gap});
+    margin-bottom: calc(-1 * #{$card-gap});
+  }
 }
 
 .card-set__item {
-  //   flex-basis: calc(100% / 3 - #{$card-gap});
-  //   margin-right: $card-gap;
+  // width: 100%;
   margin-bottom: $card-gap;
+
+  @media screen and (min-width: $large) {
+    flex-basis: calc(100% / 3 - #{$card-gap});
+    margin-right: $card-gap;
+  }
 }
 
 .product__link {
