--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-.logo, .contacts__link, .site-nav__link, .product__link, .address__link, .footer-contacts__link {
+.logo, .contacts__link, .site-nav__link, .mobile-social__link, .product__link, .address__link, .footer-contacts__link {
   font-style: normal;
   text-decoration: none;
   color: inherit;
@@ -302,17 +302,6 @@ ul {
   list-style: none;
 }
 
-.visually-hidden-title {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
 body {
   font-family: Roboto, sans-serif;
   font-weight: 400;
@@ -324,6 +313,7 @@ body {
 }
 
 .container {
+  min-width: 320px;
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
@@ -352,6 +342,7 @@ body {
   font-weight: 700;
   font-size: 24px;
   line-height: 1.17;
+  letter-spacing: 0.03em;
   color: #2196f3;
 }
 
@@ -372,12 +363,18 @@ body {
     font-weight: 700;
     font-size: 26px;
     line-height: 1.9;
+    letter-spacing: 0.03em;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .contacts {
+    display: none;
   }
 }
 
 .contacts__link {
-  padding-top: 32px;
-  padding-bottom: 32px;
+  display: block;
   font-weight: 500;
   letter-spacing: 0.02em;
   color: #757575;
@@ -387,6 +384,22 @@ body {
 
 .contacts__link:hover, .contacts__link:focus {
   color: #2196f3;
+}
+
+@media screen and (min-width: 768px) {
+  .contacts__link:hover, .contacts__link:focus {
+    padding-top: 32px;
+    padding-bottom: 32px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 .contacts__icon {
@@ -457,6 +470,7 @@ body {
   font-weight: 700;
   font-size: 28px;
   line-height: 1.18;
+  letter-spacing: 0.03em;
   text-align: center;
 }
 
@@ -466,6 +480,7 @@ body {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.17;
+    letter-spacing: 0.03em;
   }
 }
 
@@ -619,8 +634,8 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   padding: 93px 15px;
   overflow-y: scroll;
   background-color: rgba(0, 0, 0, 0.2);
@@ -635,16 +650,7 @@ body {
 }
 
 .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%) scale(1);
-          transform: translate(-50%, -50%) scale(1);
-  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  width: 450px;
+  position: relative;
   min-height: 609px;
   padding: 40px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -653,9 +659,25 @@ body {
   background-color: #ffffff;
 }
 
+@media screen and (min-width: 768px) {
+  .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    max-width: 450px;
+    width: 100%;
+    -webkit-transform: translate(-50%, -50%) scale(1);
+            transform: translate(-50%, -50%) scale(1);
+    -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .modal {
-    width: 528px;
+    max-width: 528px;
     min-height: 581px;
   }
 }
@@ -700,12 +722,14 @@ body {
   margin-bottom: 12px;
   font-size: 20px;
   line-height: 1.5;
+  letter-spacing: 0.03em;
   text-align: center;
 }
 
 @media screen and (min-width: 1200px) {
   .modal__title {
     line-height: 1.15;
+    letter-spacing: 0.03em;
   }
 }
 
@@ -855,6 +879,7 @@ body {
 .form__text {
   font-size: 12px;
   line-height: 1.17;
+  letter-spacing: 0.03em;
   color: #757575;
 }
 
@@ -862,6 +887,7 @@ body {
   .form__text {
     font-size: 14px;
     line-height: 1.71;
+    letter-spacing: 0.03em;
   }
 }
 
@@ -878,6 +904,10 @@ body {
 .page-header {
   background-color: #ffffff;
   border-bottom: 1px solid #ececec;
+}
+
+.page-header__container {
+  min-height: 60px;
 }
 
 @media screen and (min-width: 1200px) {
@@ -914,6 +944,12 @@ body {
   }
 }
 
+@media screen and (max-width: 767px) {
+  .site-nav__list {
+    display: none;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .site-nav__list {
     display: -webkit-box;
@@ -925,17 +961,22 @@ body {
 
 .site-nav__link {
   display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  font-weight: 500;
-  letter-spacing: 0.02em;
-  color: #000000;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .site-nav__link:hover, .site-nav__link:focus {
   color: #2196f3;
+}
+
+@media screen and (min-width: 768px) {
+  .site-nav__link {
+    font-weight: 500;
+    letter-spacing: 0.02em;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    color: #000000;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -961,21 +1002,113 @@ body {
   }
 }
 
-.menu__toggle {
+.mobile-menu__toggle {
   padding: 0;
   border: none;
+  color: #212121;
   background-color: transparent;
 }
 
-.menu__container {
+.mobile-menu__toggle:hover, .mobile-menu__toggle:focus {
+  color: #2196f3;
+}
+
+.mobile-menu__menu-icon {
+  fill: currentColor;
+}
+
+.mobile-menu__close-icon {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  fill: currentColor;
+}
+
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 999;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   padding: 48px 40px;
   background-color: #ffffff;
 }
 
-@media screen and (max-width: 767px) {
-  .menu__container {
-    display: none;
-  }
+.mobile-menu .site-nav__list {
+  display: block;
+}
+
+.mobile-menu .site-nav__item {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
+
+.mobile-menu .site-nav__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-menu .contacts {
+  display: block;
+}
+
+.mobile-menu .contacts__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-menu .contacts__link {
+  font-size: 34px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+}
+
+.mobile-menu__bottom {
+  margin-top: auto;
+}
+
+.mobile-social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 64px;
+}
+
+.mobile-social__item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.mobile-social__link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+
+.mobile-social__link::after {
+  content: '';
+  width: 22px;
+  height: 0;
+  margin-left: 10px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
 }
 
 .hero {
@@ -1140,6 +1273,7 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
+  letter-spacing: 0.03em;
   text-align: center;
   color: #212121;
 }
@@ -1148,6 +1282,7 @@ body {
   margin-bottom: 16px;
   font-size: 16px;
   line-height: 1.19;
+  letter-spacing: 0.03em;
   text-align: center;
 }
 
@@ -1161,8 +1296,8 @@ body {
 }
 
 .clients__item {
-  -ms-flex-preferred-size: calc((100% - 2 * 30px) / 2);
-      flex-basis: calc((100% - 2 * 30px) / 2);
+  -ms-flex-preferred-size: calc(100% / 2 - 30px);
+      flex-basis: calc(100% / 2 - 30px);
   margin: 15px;
 }
 
@@ -1176,7 +1311,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 210px;
+  max-width: 210px;
   height: 92px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
@@ -1238,6 +1373,7 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
+  letter-spacing: 0.03em;
   color: #212121;
   background-color: #f5f4fa;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1339,6 +1475,7 @@ body {
 .product__description {
   font-size: 16px;
   line-height: 1.87;
+  letter-spacing: 0.03em;
   color: #757575;
 }
 
