--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,17 +1,18 @@
 .container {
+  min-width: 320px;
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
 
-  @media screen and (min-width: $small) {
+  @media screen and (min-width: 480px) {
     width: 480px;
   }
 
-  @media screen and (min-width: $medium) {
+  @media screen and (min-width: 768px) {
     width: 768px;
   }
 
-  @media screen and (min-width: $large) {
+  @media screen and (min-width: 1200px) {
     width: 1200px;
   }
 }
