--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -2,8 +2,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   padding: 93px 15px;
   overflow-y: scroll;
 
@@ -18,13 +18,8 @@
 }
 
 .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(1);
-  transition: transform $timing $function, box-shadow $timing $function;
+  position: relative;
 
-  width: 450px;
   min-height: 609px;
   padding: 40px;
 
@@ -33,8 +28,18 @@
   border-radius: 4px;
   background-color: $primary-bg-white-color;
 
-  @media screen and (min-width: $large) {
-    width: 528px;
+  @media screen and (min-width: 768px) {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    max-width: 450px;
+    width: 100%;
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform $timing $function, box-shadow $timing $function;
+  }
+
+  @media screen and (min-width: 1200px) {
+    max-width: 528px;
     min-height: 581px;
   }
 }
@@ -72,11 +77,11 @@
   @extend %title;
   margin-bottom: 12px;
 
-  @include font(null, 20px, 1.5, null);
+  @include font(null, 20px, 1.5);
   text-align: center;
 
-  @media screen and (min-width: $large) {
-    @include font(null, null, 1.15, null);
+  @media screen and (min-width: 1200px) {
+    @include font(null, null, 1.15);
   }
 }
 
@@ -188,11 +193,11 @@
 }
 
 .form__text {
-  @include font(null, 12px, 1.17, null);
+  @include font(null, 12px, 1.17);
   color: $primary-text-color;
 
-  @media screen and (min-width: $large) {
-    @include font(null, 14px, 1.71, null);
+  @media screen and (min-width: 1200px) {
+    @include font(null, 14px, 1.71);
   }
 }
 
