--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -14,7 +14,7 @@
     background-color: $secondary-bg-color;
   }
 
-  @media screen and (min-width: $large) {
+  @media screen and (min-width: 1200px) {
     padding-top: 94px;
     padding-bottom: 94px;
   }
@@ -24,11 +24,11 @@
   @extend %title;
   margin-bottom: 30px;
 
-  @include font($bold, 28px, 1.18, null);
+  @include font($bold, 28px, 1.18);
   text-align: center;
 
-  @media screen and (min-width: $large) {
+  @media screen and (min-width: 1200px) {
     margin-bottom: 50px;
-    @include font($bold, 36px, 1.17, null);
+    @include font($bold, 36px, 1.17);
   }
 }
