--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -7,8 +7,9 @@
 }
 
 .clients__item {
-  flex-basis: calc((100% - 2 * #{$card-gap}) / 2);
+  flex-basis: calc(100% / 2 - #{$card-gap});
   margin: 15px;
+
   // flex-basis: calc(100% / 2 - #{$card-gap});
   // margin-right: $card-gap;
   // margin-bottom: $card-gap;
@@ -25,7 +26,7 @@
 
 .clients__link {
   @include centered-flex();
-  width: 210px;
+  max-width: 210px;
 
   height: 92px;
   border: 1px solid $border-color;
@@ -40,7 +41,7 @@
     color: $accent-color;
   }
 
-  @media screen and (min-width: $large) {
+  @media screen and (min-width: 1200px) {
     width: 170px;
   }
 }
