--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,9 +1,11 @@
 .page-header {
+  // min-height: 60px;
   background-color: $primary-bg-white-color;
   border-bottom: 1px solid #ececec;
 }
 
 .page-header__container {
+  min-height: 60px;
   @media screen and (min-width: 1200px) {
     display: flex;
   }
