--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -1,14 +1,117 @@
-.menu__toggle {
+.mobile-menu__toggle {
+  // @include centered-flex();
   padding: 0;
   border: none;
+  color: $secondary-text-color;
   background-color: transparent;
+
+  &:hover,
+  &:focus {
+    color: $accent-color;
+  }
+
+  @media screen and (min-width: 768px) {
+    // display: none;
+  }
+}
+
+.mobile-menu__menu-icon {
+  fill: currentColor;
+}
+
+.mobile-menu__close-icon {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  fill: currentColor;
 }
 
 .menu__container {
+  // padding: 48px 40px;
+  // background-color: $primary-bg-white-color;
+  // position: fixed;
+  // top: 0;
+  // left: 0;
+  // width: 100vw;
+  // height: 100vh;
+  // z-index: 999;
+  // transform: translateX(-100%);
+  // transition: transform 500ms linear;
+
+  // &.is-open {
+  //   transform: translateX(0);
+  //   @media screen and (max-width: 767px) {
+  //     display: none;
+  //     position: fixed;
+  //     top: 0;
+  //     left: 0;
+  //   }
+
+  //   }
+}
+
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 999;
+
+  display: flex;
+  flex-direction: column;
   padding: 48px 40px;
   background-color: $primary-bg-white-color;
+}
 
-  @media screen and (max-width: 767px) {
-    display: none;
+.mobile-menu .site-nav__list {
+  display: block;
+}
+.mobile-menu .site-nav__item {
+  @include font($semibold, 40px, 1.17);
+  color: $secondary-text-color;
+
+  &:not(:last-child) {
+    margin-bottom: 32px;
   }
+}
+
+.mobile-menu .contacts {
+  display: block;
+}
+
+.mobile-menu .contacts__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-menu .contacts__link {
+  @include font(null, 34px, 1.18, 0.02em);
+}
+
+.mobile-menu__bottom {
+  margin-top: auto;
+}
+
+.mobile-social {
+  @include centered-flex($justify: flex-start);
+  margin-top: 64px;
+}
+
+.mobile-social__item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.mobile-social__link {
+  @extend %link;
+  @include font($semibold, 18px, 1.22, 0.02em);
+  color: $accent-color;
+}
+
+.mobile-social__link::after {
+  content: '';
+  width: 22px;
+  height: 0;
+  margin-left: 10px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  transform: rotate(90deg);
 }
