--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -1,5 +1,4 @@
 .mobile-menu__toggle {
-  // @include centered-flex();
   padding: 0;
   border: none;
   color: $secondary-text-color;
@@ -26,66 +25,52 @@
   fill: currentColor;
 }
 
-.menu__container {
-  // padding: 48px 40px;
-  // background-color: $primary-bg-white-color;
-  // position: fixed;
-  // top: 0;
-  // left: 0;
-  // width: 100vw;
-  // height: 100vh;
-  // z-index: 999;
-  // transform: translateX(-100%);
-  // transition: transform 500ms linear;
-
-  // &.is-open {
-  //   transform: translateX(0);
-  //   @media screen and (max-width: 767px) {
-  //     display: none;
-  //     position: fixed;
-  //     top: 0;
-  //     left: 0;
-  //   }
-
-  //   }
-}
-
 .mobile-menu {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  z-index: 999;
+  @media screen and (max-width: 767px) {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 999;
+    transform: translateX(-100%);
+    transition: transform $timing $function;
 
-  display: flex;
-  flex-direction: column;
-  padding: 48px 40px;
-  background-color: $primary-bg-white-color;
+    display: flex;
+    flex-direction: column;
+    padding: 48px 40px;
+    background-color: $primary-bg-white-color;
+
+    &.is-open {
+      transform: translateX(0);
+    }
+  }
 }
 
-.mobile-menu .site-nav__list {
+.mobile-menu__list {
   display: block;
 }
-.mobile-menu .site-nav__item {
-  @include font($semibold, 40px, 1.17);
-  color: $secondary-text-color;
-
+.mobile-menu__item {
   &:not(:last-child) {
     margin-bottom: 32px;
   }
 }
 
-.mobile-menu .contacts {
-  display: block;
+.mobile-menu__link {
+  @include font($semibold, 40px, 1.17, 0.02em);
+  color: $secondary-text-color;
 }
 
-.mobile-menu .contacts__item:not(:last-child) {
-  margin-bottom: 32px;
-}
-
-.mobile-menu .contacts__link {
+.mobile-menu__link[href^='tel'] {
   @include font(null, 34px, 1.18, 0.02em);
+  font-size: 7.08vw;
+  color: $accent-color;
+}
+
+.mobile-menu__link[href^='mailto'] {
+  @include font(null, 24px, 1.17, 0.02em);
+
+  color: $primary-text-color;
 }
 
 .mobile-menu__bottom {
@@ -94,11 +79,9 @@
 
 .mobile-social {
   @include centered-flex($justify: flex-start);
-  margin-top: 64px;
-}
+  flex-wrap: wrap;
 
-.mobile-social__item:not(:last-child) {
-  margin-right: 10px;
+  margin-top: 64px;
 }
 
 .mobile-social__link {
@@ -107,11 +90,10 @@
   color: $accent-color;
 }
 
-.mobile-social__link::after {
+.mobile-social__item:not(:last-child)::after {
   content: '';
   width: 22px;
-  height: 0;
+  height: 1px;
   margin-left: 10px;
   border: 1px solid rgba(33, 33, 33, 0.2);
-  transform: rotate(90deg);
 }
