--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,17 @@
   color: #212121;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 /*! modern-normalize v1.1.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
 /*
 Document
@@ -313,7 +324,6 @@ body {
 }
 
 .container {
-  min-width: 320px;
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
@@ -846,17 +856,6 @@ body {
   color: rgba(117, 117, 117, 0.5);
 }
 
-.form__checkbox {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
 .form__check-icon {
   display: inline-block;
   margin-right: 7px;
@@ -902,6 +901,7 @@ body {
 }
 
 .page-header {
+  width: 100%;
   background-color: #ffffff;
   border-bottom: 1px solid #ececec;
 }
@@ -969,6 +969,12 @@ body {
   color: #2196f3;
 }
 
+@media screen and (max-width: 767px) {
+  .site-nav__link.current {
+    color: #2196f3;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .site-nav__link {
     font-weight: 500;
@@ -980,11 +986,10 @@ body {
 }
 
 @media screen and (min-width: 1200px) {
-  .site-nav__link--current {
+  .site-nav__link.current {
     position: relative;
-    color: #2196f3;
   }
-  .site-nav__link--current::after {
+  .site-nav__link.current::after {
     position: absolute;
     bottom: -1px;
     left: 0;
@@ -1024,52 +1029,65 @@ body {
   fill: currentColor;
 }
 
-.mobile-menu {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  z-index: 999;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  padding: 48px 40px;
-  background-color: #ffffff;
+@media screen and (max-width: 767px) {
+  .mobile-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 999;
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
+    -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 48px 40px;
+    background-color: #ffffff;
+  }
+  .mobile-menu.is-open {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
 }
 
-.mobile-menu .site-nav__list {
+.mobile-menu__list {
   display: block;
 }
 
-.mobile-menu .site-nav__item {
+.mobile-menu__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-menu__link {
   font-weight: 500;
   font-size: 40px;
   line-height: 1.17;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.02em;
   color: #212121;
 }
 
-.mobile-menu .site-nav__item:not(:last-child) {
-  margin-bottom: 32px;
-}
-
-.mobile-menu .contacts {
-  display: block;
-}
-
-.mobile-menu .contacts__item:not(:last-child) {
-  margin-bottom: 32px;
-}
-
-.mobile-menu .contacts__link {
+.mobile-menu__link[href^='tel'] {
   font-size: 34px;
   line-height: 1.18;
   letter-spacing: 0.02em;
+  font-size: 7.08vw;
+  color: #2196f3;
+}
+
+.mobile-menu__link[href^='mailto'] {
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: #757575;
 }
 
 .mobile-menu__bottom {
@@ -1086,11 +1104,9 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin-top: 64px;
-}
-
-.mobile-social__item:not(:last-child) {
-  margin-right: 10px;
 }
 
 .mobile-social__link {
@@ -1101,18 +1117,17 @@ body {
   color: #2196f3;
 }
 
-.mobile-social__link::after {
+.mobile-social__item:not(:last-child)::after {
   content: '';
   width: 22px;
-  height: 0;
+  height: 1px;
   margin-left: 10px;
   border: 1px solid rgba(33, 33, 33, 0.2);
-  -webkit-transform: rotate(90deg);
-          transform: rotate(90deg);
 }
 
 .hero {
   max-width: 1600px;
+  width: 100%;
   min-height: 400px;
   margin-left: auto;
   margin-right: auto;
@@ -1133,10 +1148,14 @@ body {
   }
 }
 
-.hero__title {
-  width: 360px;
+.hero__container {
+  max-width: 360px;
   margin-left: auto;
   margin-right: auto;
+  padding: 0;
+}
+
+.hero__title {
   margin-bottom: 30px;
   font-weight: 900;
   font-size: 26px;
