--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,5 +1,5 @@
 .page-header {
-  // min-height: 60px;
+  width: 100%;
   background-color: $primary-bg-white-color;
   border-bottom: 1px solid #ececec;
 }
