--- a/css/main.css
+++ b/css/main.css
@@ -383,6 +383,23 @@ body {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .contacts {
+    margin-left: auto;
+    padding: 21px 0;
+  }
+}
+
+.contacts__item {
+  display: block;
+}
+
+@media screen and (min-width: 768px) {
+  .contacts__item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+
 .contacts__link {
   display: block;
   font-weight: 500;
@@ -394,22 +411,6 @@ body {
 
 .contacts__link:hover, .contacts__link:focus {
   color: #2196f3;
-}
-
-@media screen and (min-width: 768px) {
-  .contacts__link:hover, .contacts__link:focus {
-    padding-top: 32px;
-    padding-bottom: 32px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
 }
 
 .contacts__icon {
@@ -930,14 +931,14 @@ body {
           align-items: center;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
   .site-nav {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -950,12 +951,24 @@ body {
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
   .site-nav__list {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    margin-left: 88px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .site-nav__list {
     margin-left: 93px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .site-nav__item:not(:last-child) {
+    margin-right: 50px;
   }
 }
 
@@ -965,14 +978,12 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.site-nav__link:hover, .site-nav__link:focus {
+.site-nav__link.current {
   color: #2196f3;
 }
 
-@media screen and (max-width: 767px) {
-  .site-nav__link.current {
-    color: #2196f3;
-  }
+.site-nav__link:hover, .site-nav__link:focus {
+  color: #2196f3;
 }
 
 @media screen and (min-width: 768px) {
@@ -983,9 +994,6 @@ body {
     padding-bottom: 32px;
     color: #000000;
   }
-}
-
-@media screen and (min-width: 1200px) {
   .site-nav__link.current {
     position: relative;
   }
@@ -1001,12 +1009,6 @@ body {
   }
 }
 
-@media screen and (min-width: 1200px) {
-  .site-nav__item:not(:last-child) {
-    margin-right: 50px;
-  }
-}
-
 .mobile-menu__toggle {
   padding: 0;
   border: none;
@@ -1016,6 +1018,12 @@ body {
 
 .mobile-menu__toggle:hover, .mobile-menu__toggle:focus {
   color: #2196f3;
+}
+
+@media screen and (min-width: 768px) {
+  .mobile-menu__toggle {
+    display: none;
+  }
 }
 
 .mobile-menu__menu-icon {
@@ -1056,6 +1064,12 @@ body {
   .mobile-menu.is-open {
     -webkit-transform: translateX(0);
             transform: translateX(0);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .mobile-menu {
+    display: none;
   }
 }
 
