--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -1,9 +1,13 @@
 .contacts {
+  // display: flex;
   @media screen and (max-width: 767px) {
     display: none;
   }
-  // display: flex;
-  // margin-left: auto;
+
+  @media screen and (min-width: 768px) {
+    margin-left: auto;
+    padding: 21px 0;
+  }
 }
 
 .contacts__item {
@@ -11,9 +15,18 @@
 
   // &:not(:last-child) {
   //   margin-right: 50px;
+
+  display: block;
+  @media screen and (min-width: 768px) {
+    &:not(:last-child) {
+      margin-bottom: 10px;
+    }
+  }
 }
 
 .contacts__link {
+  // padding-top: 32px;
+  // padding-bottom: 32px;
   @extend %link;
   display: block;
 
@@ -25,10 +38,8 @@
   &:focus {
     color: $accent-color;
 
-    @media screen and (min-width: 768px) {
-      padding-top: 32px;
-      padding-bottom: 32px;
-      @include centered-flex();
+    @media screen and (min-width: 1200px) {
+      // @include centered-flex();
     }
   }
 }
