--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -10,7 +10,7 @@
   }
 
   @media screen and (min-width: 768px) {
-    // display: none;
+    display: none;
   }
 }
 
@@ -44,6 +44,10 @@
     &.is-open {
       transform: translateX(0);
     }
+  }
+
+  @media screen and (min-width: 768px) {
+    display: none;
   }
 }
 
