--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -5,10 +5,14 @@
 }
 
 .footer__container {
-  text-align: center;
-
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 768px) {
     @include centered-flex($align: baseline);
+    flex-wrap: wrap;
+    align-content: center;
+  }
+
+  @media screen and (max-width: 1199px) {
+    text-align: center;
   }
 }
 
@@ -19,6 +23,10 @@
     margin-bottom: 60px;
   }
 
+  @media screen and (min-width: 767px) and (max-width: 1199px) {
+    width: 50%;
+  }
+
   @media screen and (min-width: 1200px) {
     margin-right: 70px;
   }
@@ -27,6 +35,12 @@
 .footer__logo {
   display: block;
   margin-bottom: 20px;
+}
+
+.address {
+  @media screen and (min-width: 767px) and (max-width: 1199px) {
+    line-height: 1.71;
+  }
 }
 
 .address__link {
@@ -64,6 +78,10 @@
     margin-bottom: 60px;
   }
 
+  @media screen and (min-width: 767px) and (max-width: 1199px) {
+    width: 50%;
+  }
+
   @media screen and (min-width: 1200px) {
     margin-right: auto;
   }
@@ -74,4 +92,12 @@
   font-weight: $bold;
   text-transform: uppercase;
   color: $primary-bg-white-color;
+}
+
+.footer__subscription {
+  @media screen and (min-width: 767px) and (max-width: 1199px) {
+    width: 100%;
+    max-width: 450px;
+    margin-top: 60px;
+  }
 }
