--- a/css/main.css
+++ b/css/main.css
@@ -412,21 +412,25 @@ body {
           align-items: center;
 }
 
-.contacts__item:not(:last-child) {
-  margin-bottom: 10px;
+@media screen and (max-width: 1199px) {
+  .contacts__item:not(:last-child) {
+    margin-bottom: 10px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  :not(:last-child) {
+  .contacts__item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .contacts__item:not(:last-child) {
     margin-right: 50px;
   }
 }
@@ -480,6 +484,20 @@ body {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .icon-envelope {
+    width: 16px;
+    height: 12px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .icon-smartphone {
+    width: 10px;
+    height: 16px;
+  }
+}
+
 .btn {
   min-width: 200px;
   height: 50px;
@@ -511,16 +529,6 @@ body {
   padding-bottom: 60px;
 }
 
-.section--no-top-padding {
-  padding-top: 0;
-}
-
-@media screen and (max-width: 1199px) {
-  .section--no-top-padding {
-    display: none;
-  }
-}
-
 .section--another-bg-color {
   background-color: #f5f4fa;
 }
@@ -529,6 +537,16 @@ body {
   .section {
     padding-top: 94px;
     padding-bottom: 94px;
+  }
+}
+
+.section--no-top-padding {
+  padding-top: 0;
+}
+
+@media screen and (max-width: 1199px) {
+  .section--no-top-padding {
+    display: none;
   }
 }
 
@@ -633,7 +651,6 @@ body {
 .subscription__input {
   width: 100%;
   height: 50px;
-  margin-bottom: 20px;
   padding-left: 16px;
   padding-right: 16px;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -672,6 +689,12 @@ body {
   color: rgba(255, 255, 255, 0.6);
 }
 
+@media screen and (max-width: 1199px) {
+  .subscription__input {
+    margin-bottom: 20px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .subscription__input {
     width: 358px;
@@ -680,8 +703,6 @@ body {
 }
 
 .subscription__btn {
-  margin-left: auto;
-  margin-right: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -691,6 +712,13 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+@media screen and (max-width: 1199px) {
+  .subscription__btn {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .subscription__icon {
@@ -836,6 +864,12 @@ body {
   color: #757575;
 }
 
+@media screen and (max-width: 767px) {
+  .form__field:focus-within > .form__label {
+    color: #2196f3;
+  }
+}
+
 .form__wrap {
   position: relative;
 }
@@ -939,6 +973,12 @@ body {
   color: #757575;
 }
 
+@media screen and (max-width: 479px) {
+  .form__text {
+    font-size: 2.5vw;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .form__text {
     font-size: 14px;
@@ -965,14 +1005,6 @@ body {
 
 .page-header__container {
   min-height: 60px;
-}
-
-@media screen and (min-width: 1200px) {
-  .page-header__container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
 }
 
 .site-nav {
@@ -1003,6 +1035,7 @@ body {
 
 @media screen and (min-width: 1200px) {
   .site-nav {
+    width: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1231,11 +1264,13 @@ body {
   }
 }
 
-.hero__container {
-  max-width: 360px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 0;
+@media screen and (max-width: 1199px) {
+  .hero__container {
+    max-width: 360px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0;
+  }
 }
 
 .hero__title {
@@ -1252,6 +1287,8 @@ body {
 @media screen and (min-width: 1200px) {
   .hero__title {
     width: 696px;
+    margin-left: auto;
+    margin-right: auto;
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
@@ -1525,7 +1562,7 @@ body {
   margin-bottom: 40px;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
   .filter {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1578,7 +1615,7 @@ body {
       flex-wrap: wrap;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
   .card-set {
     margin-right: calc(-1 * 30px);
     margin-bottom: calc(-1 * 30px);
@@ -1586,19 +1623,34 @@ body {
 }
 
 .card-set__item {
+  width: 100%;
   margin-bottom: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .card-set__item {
+    -ms-flex-preferred-size: calc(100% / 2 - 30px);
+        flex-basis: calc(100% / 2 - 30px);
+    margin-right: 30px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
   .card-set__item {
     -ms-flex-preferred-size: calc(100% / 3 - 30px);
         flex-basis: calc(100% / 3 - 30px);
-    margin-right: 30px;
   }
 }
 
 .product__link {
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
   -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1641,6 +1693,9 @@ body {
 }
 
 .product__meta {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   padding: 20px 24px;
   border: 1px solid #eeeeee;
   border-top: none;
@@ -1666,11 +1721,7 @@ body {
   background-color: #2f303a;
 }
 
-.footer__container {
-  text-align: center;
-}
-
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
   .footer__container {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1681,6 +1732,16 @@ body {
     -webkit-box-align: baseline;
         -ms-flex-align: baseline;
             align-items: baseline;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-line-pack: center;
+        align-content: center;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .footer__container {
+    text-align: center;
   }
 }
 
@@ -1694,6 +1755,12 @@ body {
   }
 }
 
+@media screen and (min-width: 767px) and (max-width: 1199px) {
+  .footer__contacts {
+    width: 50%;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .footer__contacts {
     margin-right: 70px;
@@ -1703,6 +1770,12 @@ body {
 .footer__logo {
   display: block;
   margin-bottom: 20px;
+}
+
+@media screen and (min-width: 767px) and (max-width: 1199px) {
+  .address {
+    line-height: 1.71;
+  }
 }
 
 .address__link {
@@ -1743,6 +1816,12 @@ body {
   }
 }
 
+@media screen and (min-width: 767px) and (max-width: 1199px) {
+  .footer__social {
+    width: 50%;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .footer__social {
     margin-right: auto;
@@ -1754,5 +1833,13 @@ body {
   font-weight: 700;
   text-transform: uppercase;
   color: #ffffff;
+}
+
+@media screen and (min-width: 767px) and (max-width: 1199px) {
+  .footer__subscription {
+    width: 100%;
+    max-width: 450px;
+    margin-top: 60px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
