--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -18,16 +18,18 @@
 .contacts__item {
   @include centered-flex($justify: flex-start);
 
-  &:not(:last-child) {
-    margin-bottom: 10px;
+  @media screen and (max-width: 1199px) {
+    &:not(:last-child) {
+      margin-bottom: 10px;
+    }
   }
-}
 
-@media screen and (min-width: 1200px) {
-  @include centered-flex();
+  @media screen and (min-width: 1200px) {
+    @include centered-flex();
 
-  &:not(:last-child) {
-    margin-right: 50px;
+    &:not(:last-child) {
+      margin-right: 50px;
+    }
   }
 }
 
@@ -62,5 +64,17 @@
 
   @media screen and (min-width: 1200px) {
     margin-right: 10px;
+  }
+}
+.icon-envelope {
+  @media screen and (min-width: 1200px) {
+    width: 16px;
+    height: 12px;
+  }
+}
+.icon-smartphone {
+  @media screen and (min-width: 1200px) {
+    width: 10px;
+    height: 16px;
   }
 }
