--- a/sass/components/_subscription.scss
+++ b/sass/components/_subscription.scss
@@ -11,8 +11,6 @@
 .subscription__input {
   width: 100%;
   height: 50px;
-  margin-bottom: 20px;
-
   padding-left: 16px;
   padding-right: 16px;
 
@@ -30,17 +28,23 @@
     color: $contacts-text-color;
   }
 
+  @media screen and (max-width: 1199px) {
+    margin-bottom: 20px;
+  }
+
   @media screen and (min-width: 1200px) {
     width: 358px;
     margin-right: 12px;
-    // margin-bottom: 0;
   }
 }
 
 .subscription__btn {
-  margin-left: auto;
-  margin-right: auto;
   @include centered-flex();
+
+  @media screen and (max-width: 1199px) {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .subscription__icon {
