--- a/css/main.css
+++ b/css/main.css
@@ -372,7 +372,7 @@ body {
   .logo {
     font-weight: 700;
     font-size: 26px;
-    line-height: 1.9;
+    line-height: 1.19;
     letter-spacing: 0.03em;
   }
 }
@@ -387,7 +387,6 @@ body {
   .contacts {
     display: block;
     margin-left: auto;
-    padding: 21px 0;
   }
 }
 
@@ -398,18 +397,6 @@ body {
     display: flex;
     padding: 0;
   }
-}
-
-.contacts__item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
 @media screen and (max-width: 1199px) {
@@ -436,7 +423,15 @@ body {
 }
 
 .contacts__link {
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   font-weight: 500;
   letter-spacing: 0.02em;
   color: #757575;
@@ -616,10 +611,6 @@ body {
 
 .social__icon:hover {
   fill: #ffffff;
-}
-
-.footer__social {
-  margin-right: auto;
 }
 
 .social__link--color-reverse {
@@ -1018,17 +1009,22 @@ body {
   min-height: 60px;
 }
 
+@media screen and (max-width: 767px) {
+  .page-header__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 .site-nav {
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
 @media screen and (min-width: 768px) {
@@ -1261,8 +1257,8 @@ body {
   padding: 118px 0;
   text-align: center;
   background-color: #2f303a;
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero-bg-image-mob-1x-min.jpg);
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg-image-mob-1x-min.jpg);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero-bg-image-mob-1x-min.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg-image-mob-1x-min.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -1276,7 +1272,8 @@ body {
 
 @media screen and (min-width: 768px) {
   .hero {
-    background-image: url(../images/hero-bg-image-tab-1x-min.jpg);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero-bg-image-tab-1x-min.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg-image-tab-1x-min.jpg);
   }
 }
 
@@ -1290,7 +1287,8 @@ body {
   .hero {
     min-height: 600px;
     padding: 200px 0;
-    background-image: url(../images/hero-bg-image-1x-min.jpg);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero-bg-image-1x-min.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg-image-1x-min.jpg);
   }
 }
 
@@ -1614,6 +1612,12 @@ img {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    margin-bottom: 40px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .filter {
     margin-bottom: 50px;
   }
 }
@@ -1622,10 +1626,15 @@ img {
   margin-right: 8px;
 }
 
+@media screen and (max-width: 767px) {
+  .filter__item:not(:last-child) {
+    margin-bottom: 15px;
+  }
+}
+
 .filter__btn {
   min-width: 73px;
   height: 38px;
-  margin-bottom: 15px;
   border: none;
   border-radius: 4px;
   padding: 6px 22px;
@@ -1665,6 +1674,9 @@ img {
 
 .project__item {
   width: 100%;
+}
+
+.project__item:not(:last-child) {
   margin-bottom: 30px;
 }
 
@@ -1673,6 +1685,7 @@ img {
     -ms-flex-preferred-size: calc(100% / 2 - 30px);
         flex-basis: calc(100% / 2 - 30px);
     margin-right: 30px;
+    margin-bottom: 30px;
   }
 }
 
@@ -1803,6 +1816,8 @@ img {
 
 @media screen and (max-width: 1199px) {
   .footer__container {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
     text-align: center;
   }
 }
@@ -1814,12 +1829,6 @@ img {
 @media screen and (max-width: 767px) {
   .footer__contacts {
     margin-bottom: 60px;
-  }
-}
-
-@media screen and (min-width: 767px) and (max-width: 1199px) {
-  .footer__contacts {
-    width: 50%;
   }
 }
 
@@ -1875,12 +1884,6 @@ img {
 @media screen and (max-width: 767px) {
   .footer__social {
     margin-bottom: 60px;
-  }
-}
-
-@media screen and (min-width: 767px) and (max-width: 1199px) {
-  .footer__social {
-    width: 50%;
   }
 }
 
