--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -6,4 +6,8 @@
 
 .page-header__container {
   min-height: 60px;
+
+  @media screen and (max-width: 767px) {
+    @include centered-flex($justify: space-between);
+  }
 }
