fix hero overlay

--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -2,13 +2,8 @@
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
-    margin-right: calc(-1 * #{$card-gap});
-    margin-bottom: calc(-1 * #{$card-gap});
+    margin: -15px;
   }
-}
-
-img {
-  width: 100%;
 }
 
 .team__item {
@@ -26,8 +21,7 @@ img {
 
   @media screen and (min-width: 768px) {
     flex-basis: calc(100% / 2 - #{$card-gap});
-    margin-right: $card-gap;
-    margin-bottom: $card-gap;
+    margin: 15px;
   }
 
   @media screen and (min-width: 1200px) {
