fix filter buttons

--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -48,6 +48,7 @@
 
   @media screen and (min-width: 1200px) {
     @include centered-flex();
+    font-size: 14px;
     padding-top: 32px;
     padding-bottom: 32px;
   }
