--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -2,8 +2,7 @@
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
-    margin-right: calc(-1 * #{$card-gap});
-    margin-bottom: calc(-1 * #{$card-gap});
+    margin: -15px;
   }
 }
 
@@ -16,8 +15,7 @@
 
   @media screen and (min-width: 768px) {
     flex-basis: calc(100% / 2 - #{$card-gap});
-    margin-right: $card-gap;
-    margin-bottom: $card-gap;
+    margin: 15px;
   }
 
   @media screen and (min-width: 1200px) {
