--- a/sass/layout/_filter.scss
+++ b/sass/layout/_filter.scss
@@ -1,11 +1,16 @@
 .filter {
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 40px;
+
+  @media screen and (max-width: 767px) {
+    margin-right: -8px;
+    margin-top: -15px;
+    margin-bottom: 40px;
+  }
 
   @media screen and (min-width: 768px) {
     @include centered-flex();
-    margin-bottom: 40px;
+    margin-bottom: 30px;
   }
 
   @media screen and (min-width: 1200px) {
@@ -14,13 +19,13 @@
 }
 
 .filter__item {
-  &:not(:last-child) {
+  @media screen and (max-width: 767px) {
     margin-right: 8px;
+    margin-top: 15px;
   }
-
-  &:nth-child(-n + 3) {
-    @media screen and (max-width: 767px) {
-      margin-bottom: 15px;
+  @media screen and (min-width: 768px) {
+    &:not(:last-child) {
+      margin-right: 8px;
     }
   }
 }
