--- a/css/main.css
+++ b/css/main.css
@@ -463,6 +463,7 @@ body {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    font-size: 14px;
     padding-top: 32px;
     padding-bottom: 32px;
   }
@@ -1344,8 +1345,7 @@ body {
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    margin-right: calc(-1 * 30px);
-    margin-bottom: calc(-1 * 30px);
+    margin: -15px;
   }
 }
 
@@ -1359,8 +1359,7 @@ body {
   .features__item {
     -ms-flex-preferred-size: calc(100% / 2 - 30px);
         flex-basis: calc(100% / 2 - 30px);
-    margin-right: 30px;
-    margin-bottom: 30px;
+    margin: 15px;
   }
 }
 
@@ -1593,7 +1592,14 @@ body {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin-bottom: 40px;
+}
+
+@media screen and (max-width: 767px) {
+  .filter {
+    margin-right: -8px;
+    margin-top: -15px;
+    margin-bottom: 40px;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -1607,7 +1613,7 @@ body {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
   }
 }
 
@@ -1617,13 +1623,16 @@ body {
   }
 }
 
-.filter__item:not(:last-child) {
-  margin-right: 8px;
+@media screen and (max-width: 767px) {
+  .filter__item {
+    margin-right: 8px;
+    margin-top: 15px;
+  }
 }
 
-@media screen and (max-width: 767px) {
-  .filter__item:nth-child(-n + 3) {
-    margin-bottom: 15px;
+@media screen and (min-width: 768px) {
+  .filter__item:not(:last-child) {
+    margin-right: 8px;
   }
 }
 
@@ -1662,8 +1671,7 @@ body {
 
 @media screen and (min-width: 768px) {
   .project {
-    margin-right: calc(-1 * 30px);
-    margin-bottom: calc(-1 * 30px);
+    margin: -15px;
   }
 }
 
@@ -1679,8 +1687,7 @@ body {
   .project__item {
     -ms-flex-preferred-size: calc(100% / 2 - 30px);
         flex-basis: calc(100% / 2 - 30px);
-    margin-right: 30px;
-    margin-bottom: 30px;
+    margin: 15px;
   }
 }
 
@@ -1727,6 +1734,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
+  height: 100%;
   padding: 63px 24px;
   font-size: 18px;
   line-height: 1.56;
