--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -3,8 +3,7 @@
   flex-wrap: wrap;
 
   @media screen and (min-width: 768px) {
-    margin-right: calc(-1 * #{$card-gap});
-    margin-bottom: calc(-1 * #{$card-gap});
+    margin: -15px;
   }
 }
 
@@ -17,8 +16,7 @@
 
   @media screen and (min-width: 768px) {
     flex-basis: calc(100% / 2 - #{$card-gap});
-    margin-right: $card-gap;
-    margin-bottom: $card-gap;
+    margin: 15px;
   }
 
   @media screen and (min-width: 1200px) {
@@ -55,6 +53,7 @@
   top: 0;
   left: 0;
   width: 100%;
+  height: 100%;
   padding: 63px 24px;
   @include font(null, 18px, 1.56);
 
